Update BrowserstackDriver.java